--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import '~ag-charts-community/styles/ag-charts-default.css'; /* Core AG Charts CSS (includes default light/dark themes) */
+@import 'ag-charts-community/styles/ag-charts-community.css'; /* Core AG Charts CSS (includes default light/dark themes) */
 
 @tailwind base;
 @tailwind components;
